artifacts/security/keycloak/manifests/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-discovery
spec:
  selector:
    app: keycloak
  clusterIP: None
  type: ClusterIP
---
apiVersion: apps/v1
# Use a stateful setup to ensure that for a rolling update Pods are restarted with a rolling strategy one-by-one.
# This prevents losing in-memory information stored redundantly in two Pods.
kind: StatefulSet
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  serviceName: keycloak-discovery
  # Run with one replica to save resources, or with two replicas to allow for rolling updates for configuration changes
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.7.4
          args: ["start", "--verbose", "--import-realm"]
          volumeMounts:
            - name: keycloak-realm-import
              mountPath: /opt/keycloak/data/import
              readOnly: true
            - name: keycloak-blogdoft-login-theme
              mountPath: /opt/keycloak/themes/blogdoft/login
              readOnly: true
          ports:
            - name: http
              containerPort: 8080
            - name: jgroups
              containerPort: 7800
            - name: jgroups-fd
              containerPort: 57800
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            periodSeconds: 1
            failureThreshold: 600              
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            periodSeconds: 10
            failureThreshold: 3              
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            periodSeconds: 10
            failureThreshold: 3              
          resources:
            limits:
              cpu: 1000m
              memory: 1500Mi
            requests:
              cpu: 250m
              memory: 1090Mi

      volumes:
        - name: keycloak-realm-import
          configMap:
            name: keycloak-realm-import
        - name: keycloak-blogdoft-login-theme
          configMap:
            name: keycloak-blogdoft-login-theme
            items:
              - key: theme.properties
                path: theme.properties
              - key: terminal.css
                path: resources/css/terminal-v4.css
              - key: template.ftl
                path: template.ftl
