artifacts/security/keycloak/manifests/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: home-arpa-ca
spec:
  tls:
    - hosts:
        - keycloak.home.arpa
      secretName: keycloak-tls
  rules:
    - host: keycloak.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
